🔧[Update] Upgrade devfile schema to version to 2.2.x